--- a/.chezmoiscripts/run_once_after_90-configure.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_90-configure.sh.tmpl
@@ -1,10 +1,7 @@
 {{ if (or (eq .chezmoi.os "linux") (eq .chezmoi.os "darwin")) -}}
-#!/usr/local/bin/zsh
 set -eufo pipefail
 
-echo "/usr/local/bin/zsh" | sudo tee -a /etc/shells
 echo "/usr/local/bin/fish" | sudo tee -a /etc/shells
-chsh -s /usr/local/bin/zsh
-chpass -s /usr/local/bin/zsh
+chsh -s /usr/local/bin/fish
 {{ end -}}
 
