--- a/.chezmoiscripts/run_once_before_10-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-install-packages.sh.tmpl
@@ -10,7 +10,7 @@ tap  "d12frosted/emacs-plus"
 tap  "hmarr/tap"
 tap  "homebrew/cask-fonts"
 tap  "homebrew/cask-drivers"
-brew "zsh"
+brew "fish"
 brew "git"
 brew "svn"
 brew "cmake"
