--- a/.chezmoiscripts/run_once_after_90-configure.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_90-configure.sh.tmpl
@@ -1,4 +1,5 @@
 {{ if (or (eq .chezmoi.os "linux") (eq .chezmoi.os "darwin")) -}}
+#!/bin/bash
 set -eufo pipefail
 
 echo "/usr/local/bin/fish" | sudo tee -a /etc/shells
