--- a/dot_config/alacritty/alacritty.yml.tmpl
+++ b/dot_config/alacritty/alacritty.yml.tmpl
@@ -3,22 +3,24 @@ window:
     x: 10
     y: 10
   dynamic_padding: true
-  decorations: buttonless
+  decorations: none
 
 font:
   normal:
-    family: FiraCode Nerd Font 
+    family: UbuntuMono Nerd Font
     style: Regular
   bold:
-    family: FiraCode Nerd Font
-    style: Extra Bold
+    family: UbuntuMono Nerd Font
+    style: Bold
   italic:
-    family: FiraCode Nerd Font
+    family: UbuntuMono Nerd Font
     style: Italic
+  size:
+    12
   offset:
-      y: 4
+    y: 4
   glyph_offset:
-      y: 2
+    y: 2
   
 shell:
 {{ if (eq .chezmoi.os "darwin") }}
