--- a/.chezmoiscripts/run_once_before_10-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-install-packages.sh.tmpl
@@ -39,6 +39,7 @@ brew "bitwarden-cli"
 brew "d12frosted/emacs-plus/emacs-plus@29", args: ["with-elrumo2-icon", "with-native-comp", "with-no-frame-refocus", "with-xwidgets"]
 cask "alacritty"
 cask "amethyst"
+cask "min"
 cask "anki"
 cask "autodesk-fusion360"
 cask "deepl"
