--- a/.chezmoiscripts/run_once_before_10-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-install-packages.sh.tmpl
@@ -31,6 +31,7 @@ brew "pandoc"
 brew "perl"
 brew "pipenv"
 brew "poppler"
+brew "maven"
 brew "ripgrep"
 brew "shellcheck"
 brew "texlab"
@@ -49,7 +50,6 @@ cask "font-ubuntu-mono-nerd-font"
 cask "karabiner-elements"
 cask "mactex-no-gui"
 cask "logitech-options"
-cask "oracle-jdk"
 cask "r"
 cask "rstudio"
 cask "signal"
