--- a/.chezmoiscripts/run_once_before_10-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-install-packages.sh.tmpl
@@ -64,4 +64,7 @@ cask "whatsapp"
 mas  "Bitwarden", id: 1352778147
 mas  "Reeder", id: 1529448980
 EOF
+
+sudo ln -sfn $(brew --prefix)/opt/openjdk/libexec/openjdk.jdk /Library/Java/JavaVirtualMachines/openjdk.jdk
+
 {{ end -}}
