--- a/.chezmoiscripts/run_once_before_10-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-install-packages.sh.tmpl
@@ -8,8 +8,10 @@ fi
 brew bundle --no-lock --file=/dev/stdin <<EOF
 tap  "d12frosted/emacs-plus"
 tap  "hmarr/tap"
+tap  "homebrew/services"
 tap  "homebrew/cask-fonts"
 tap  "homebrew/cask-drivers"
+tap  "koekeishiya/formulae"
 brew "fish"
 brew "git"
 brew "svn"
@@ -39,8 +41,8 @@ brew "texlab"
 brew "tmux"
 brew "bitwarden-cli"
 brew "d12frosted/emacs-plus/emacs-plus@29", args: ["with-elrumo2-icon", "with-native-comp", "with-no-frame-refocus", "with-xwidgets"]
+brew "koekeishiya/formulae/yabai"
 cask "alacritty"
-cask "amethyst"
 cask "min"
 cask "anki"
 cask "autodesk-fusion360"
