--- a/.chezmoiscripts/run_once_after_90-configure.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_90-configure.sh.tmpl
@@ -4,5 +4,8 @@ set -eufo pipefail
 
 echo "/usr/local/bin/fish" | sudo tee -a /etc/shells
 chsh -s /usr/local/bin/fish
+
+brew services start yabai
+brew services start skhd
 {{ end -}}
 
