--- a/.chezmoiscripts/run_once_before_10-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-install-packages.sh.tmpl
@@ -42,6 +42,7 @@ brew "tmux"
 brew "bitwarden-cli"
 brew "d12frosted/emacs-plus/emacs-plus@29", args: ["with-elrumo2-icon", "with-native-comp", "with-no-frame-refocus", "with-xwidgets"]
 brew "koekeishiya/formulae/yabai"
+brew "koekeishiya/formulae/skhd"
 cask "alacritty"
 cask "min"
 cask "anki"
