add script loading

--- a/.chezmoiscripts/run_once_after_90-configure.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_90-configure.sh.tmpl
@@ -5,6 +5,8 @@ set -eufo pipefail
 echo "/usr/local/bin/fish" | sudo tee -a /etc/shells
 chsh -s /usr/local/bin/fish
 
+echo "$(whoami) ALL = (root) NOPASSWD: $(which yabai) --load-sa" | sudo tee -a /private/etc/sudoers.d/yabai
+
 brew services start yabai
 brew services start skhd
 {{ end -}}
