orgcaldav + gpg + authinfo init

--- a/.chezmoiscripts/run_once_before_10-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-install-packages.sh.tmpl
@@ -39,6 +39,8 @@ brew "maven"
 brew "ripgrep"
 brew "shellcheck"
 brew "texlab"
+brew "pinentry-mac"
+brew "gnupg"
 brew "tmux"
 brew "bitwarden-cli"
 brew "d12frosted/emacs-plus/emacs-plus@29", args: ["with-elrumo2-icon", "with-native-comp", "with-no-frame-refocus", "with-xwidgets"]
