--- a/dot_config/emacs/private_lisp/vulpea-org-roam-caldav.el.tmpl
+++ b/dot_config/emacs/private_lisp/vulpea-org-roam-caldav.el.tmpl
@@ -1,8 +1,26 @@
 (setq org-caldav-inbox (concat org-roam-directory "nextcloud.org"))
 (setq org-icalendar-timezone "Europe/Berlin")
 (setq org-caldav-url {{ (bitwardenFields "item" "Nextcloud Admin").CalDav.value }})
+(setq caldav-host {{ (bitwardenFields "item" "Nextcloud Admin").host.value }})
+(setq caldav-user  "{{ (bitwarden "item" "Nextcloud Admin").login.username }}")
 (setq org-caldav-calendar-id "personal")
 
+(defun caldav-check-credentials ()
+  "Function that checks if caldav credentials are avaliable or gets it from bw."
+  (unless (auth-source-search :host caldav-host)
+    (let* ((c (auth-source-search
+               :host caldav-host 
+               :user caldav-user
+               :secret (shell-command-to-string
+                        "bw get item 'Nextcloud Admin' | jq -r '.fields[1] .value'")
+               :max 1
+               :create t
+               :port "https"
+               :type 'netrc))
+           (C (plist-get (nth 0 c) :save-function)))
+      (funcall C))))
+
+(add-hook 'bitwarden-after-init-prompt-hooks 'caldav-check-credentials)
 
 (setq org-agenda-prefix-format
       '((agenda . " %i %-12(vulpea-agenda-category)%?-12t% s")
