--- a/dot_config/emacs/private_lisp/vulpea-org-roam-caldav.el.tmpl
+++ b/dot_config/emacs/private_lisp/vulpea-org-roam-caldav.el.tmpl
@@ -1,4 +1,4 @@
-(setq org-caldav-inbox (concat org-roam-directory "nextcloud.org"))
+(setq org-caldav-inbox (concat org-roam-directory "caldav.org"))
 (setq org-icalendar-timezone "Europe/Berlin")
 (setq org-caldav-url {{ (bitwardenFields "item" "Nextcloud Admin").CalDav.value }})
 (setq caldav-host {{ (bitwardenFields "item" "Nextcloud Admin").host.value }})
@@ -113,9 +113,9 @@ tasks."
 (defun vulpea-agenda-files-update (&rest _)
   "Update the value of `org-agenda-files'."
   (setq org-agenda-files (vulpea-project-files))
-  (add-to-list 'org-agenda-files (concat org-roam-directory "archive.org"))
+  (add-to-list 'org-agenda-files (concat org-roam-directory "archiv.org"))
   (setq org-caldav-files org-agenda-files)
-  (add-to-list 'org-agenda-files (concat org-roam-directory "nextcloud.org")))
+  (add-to-list 'org-agenda-files org-caldav-inbox))
 
 (add-hook 'find-file-hook #'vulpea-project-update-tag)
 (add-hook 'before-save-hook #'vulpea-project-update-tag)
