--- a/.chezmoiscripts/run_once_before_10-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-install-packages.sh.tmpl
@@ -46,6 +46,9 @@ brew "bitwarden-cli"
 brew "d12frosted/emacs-plus/emacs-plus@29", args: ["with-elrumo2-icon", "with-native-comp", "with-no-frame-refocus", "with-xwidgets"]
 brew "koekeishiya/formulae/yabai"
 brew "koekeishiya/formulae/skhd"
+brew "zbar"
+brew "pass"
+brew "pass-otp"
 cask "alacritty"
 cask "min"
 cask "anki"
