git helper pass

--- a/.chezmoiscripts/run_once_before_10-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-install-packages.sh.tmpl
@@ -49,6 +49,7 @@ brew "koekeishiya/formulae/skhd"
 brew "zbar"
 brew "pass"
 brew "pass-otp"
+brew "pass-git-helper"
 cask "alacritty"
 cask "min"
 cask "anki"
