--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -1,10 +1,8 @@
 [user]
 	name = Gregor
-	email = {{ (bitwarden "item" "github.com").login.username }}
-{{ if (eq .chezmoi.os "darwin") -}}
+	email = {{ pass "other/me" }}
 [credential]
-	helper = osxkeychain
-{{ end -}}
+	helper = !pass-git-helper $@
 [core]
 	excludesFile = ~/.config/git/ignore
 [init]
