--- a/.chezmoiscripts/run_once_after_90-mac-configure.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_90-mac-configure.sh.tmpl
@@ -1,4 +1,4 @@
-{{ if (or (eq .chezmoi.os "linux") (eq .chezmoi.os "darwin")) -}}
+{{ if eq .chezmoi.os "darwin" -}}
 #!/bin/bash
 set -eufo pipefail
 
