--- a/private_dot_gnupg/gpg-agent.conf.tmpl
+++ b/private_dot_gnupg/gpg-agent.conf.tmpl
@@ -1,4 +1,10 @@
+{{ if eq .chezmoi.os "darwin" -}}
 pinentry-program /usr/local/bin/pinentry-mac
+{{ end -}}
+
+{{ if eq .chezmoi.os "linux" -}}
+{{ end -}}
+
 allow-emacs-pinentry
 allow-loopback-pinentry
 default-cache-ttl 18000
