--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -50,7 +50,7 @@
 #waybar {
     background-color: #222222; /* Sway palette: unfocused/background */
     color: #ffffff; /* Sway palette: focused/text */
-    font-family: system-ui, sans-serif;
+    font-family: Cantarell;
     font-size: 14px;
 }
 
