--- a/.chezmoiscripts/run_once_after_80-linux-keymaps.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_80-linux-keymaps.sh.tmpl
@@ -1,7 +1,8 @@
 {{- if (eq .chezmoi.os "linux") -}}
 #!/bin/fish
 
-sudo mkdir -p /etc/interception/dual-function-keys/ 
+sudo mkdir -p /etc/interception/dual-function-keys/
+sudo mkdir -p /opt/interception/
 echo "
 TIMING:
   TAP_MILLISEC: 200
@@ -17,10 +18,13 @@ MAPPINGS:
 " | sudo tee /etc/interception/dual-function-keys/gwbrck-map.yaml
 
 echo "
-- JOB: 'intercept -g /dev/input/by-id/usb-Apple_Inc._Apple_Internal_Keyboard___Trackpad-event-kbd | dual-function-keys -c /etc/interception/dual-function-keys/gwbrck-map.yaml | uinput -d /dev/input/by-id/usb-Apple_Inc._Apple_Internal_Keyboard___Trackpad-event-kbd'
+- JOB: intercept -g \$DEVNODE | dual-function-keys -c /etc/interception/dual-function-keys/gwbrck-map.yaml | /opt/interception/interception-pipe1 | uinput -d \$DEVNODE
   DEVICE:
-    NAME: 'Apple Inc. Apple Internal Keyboard / Trackpad'
+    EVENTS:
+      EV_KEY: [KEY_CAPSLOCK, KEY_BACKSLASH]
 " | sudo tee /etc/interception/udevmon.yaml
+
+sudo cp -f {{ joinPath .chezmoi.sourceDir "bin/interception-pipe1" }} /opt/interception/interception-pipe1
 
 sudo systemctl enable udevmon.service
 sudo systemctl restart udevmon.service
