--- a/private_dot_gnupg/gpg-agent.conf.tmpl
+++ b/private_dot_gnupg/gpg-agent.conf.tmpl
@@ -3,7 +3,7 @@ pinentry-program /usr/local/bin/pinentry-mac
 {{ end -}}
 
 {{ if eq .chezmoi.os "linux" -}}
-pinentry-program /usr/bin/pinentry-qt
+pinentry-program /usr/bin/pinentry-gnome3
 {{ end -}}
 
 enable-ssh-support
