--- a/.chezmoiscripts/run_once_before_10-linux-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-linux-install-packages.sh.tmpl
@@ -59,6 +59,8 @@ sudo pacman -S --needed pass
 sudo pacman -S --needed pass-otp
 sudo pacman -S --needed passff-host
 sudo pacman -S --needed pipewire
+sudo pacman -S --needed wireplumber
+sudo pacman -S --needed pipewire-pulse
 sudo pacman -S --needed poppler-glib
 sudo pacman -S --needed qrencode
 sudo pacman -S --needed qt6-wayland
