--- a/.chezmoiscripts/run_once_before_10-linux-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-linux-install-packages.sh.tmpl
@@ -75,6 +75,13 @@ if ! type -q paru
         set -e CWD
 end
 
+if ! type -q cupsctl 
+         paru -S brother-hll2350dw 
+         sudo pacman -S cups cups-pdf ghostscript
+         systemctl enable --now cups.service
+         systemctl enable --now avahi-daemon.service
+end
+
 if ! type -q darkman
         paru -S darkman
         systemctl --user enable --now darkman.service
