--- a/.chezmoiscripts/run_once_after_80-linux-keymaps.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_80-linux-keymaps.sh.tmpl
@@ -14,6 +14,12 @@ MAPPINGS:
     HOLD: [ KEY_LEFTCTRL, KEY_LEFTMETA, KEY_LEFTALT, KEY_LEFTSHIFT, ]
   - KEY: KEY_BACKSLASH
     TAP: KEY_BACKSLASH
+    HOLD: [ KEY_LEFTCTRL, KEY_LEFTMETA, KEY_LEFTALT, KEY_LEFTSHIFT, ]
+  - KEY: KEY_SLASH
+    TAP: KEY_SLASH
+    HOLD: KEY_LEFTCTRL
+  - KEY: KEY_102ND
+    TAP: KEY_102ND
     HOLD: KEY_LEFTCTRL
 " | sudo tee /etc/interception/dual-function-keys/gwbrck-map.yaml
 
