--- a/.chezmoiscripts/run_once_after_80-linux-keymaps.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_80-linux-keymaps.sh.tmpl
@@ -11,10 +11,10 @@ TIMING:
 MAPPINGS:
   - KEY: KEY_CAPSLOCK
     TAP: KEY_ESC
-    HOLD: [ KEY_LEFTCTRL, KEY_LEFTMETA, KEY_LEFTALT, KEY_LEFTSHIFT, ]
+    HOLD: [ KEY_LEFTCTRL, KEY_LEFTMETA, KEY_LEFTALT, KEY_RIGHTCTRL, ]
   - KEY: KEY_BACKSLASH
     TAP: KEY_BACKSLASH
-    HOLD: [ KEY_LEFTCTRL, KEY_LEFTMETA, KEY_LEFTALT, KEY_LEFTSHIFT, ]
+    HOLD: [ KEY_LEFTCTRL, KEY_LEFTMETA, KEY_LEFTALT, KEY_RIGHTCTRL, ]
   - KEY: KEY_SLASH
     TAP: KEY_SLASH
     HOLD: KEY_LEFTCTRL
