finaly good mappings without hyper

--- a/.chezmoiscripts/run_once_after_80-linux-keymaps.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_80-linux-keymaps.sh.tmpl
@@ -8,19 +8,24 @@ TIMING:
   TAP_MILLISEC: 200
   DOUBLE_TAP_MILLISEC: 0
 
+
 MAPPINGS:
   - KEY: KEY_CAPSLOCK
     TAP: KEY_ESC
-    HOLD: [ KEY_LEFTCTRL, KEY_LEFTMETA, KEY_LEFTALT, KEY_RIGHTCTRL, ]
+    HOLD: KEY_FN_1 
+    HOLD_START: BEFORE_CONSUME
   - KEY: KEY_BACKSLASH
     TAP: KEY_BACKSLASH
-    HOLD: [ KEY_LEFTCTRL, KEY_LEFTMETA, KEY_LEFTALT, KEY_RIGHTCTRL, ]
+    HOLD: KEY_FN_1 
+    HOLD_START: BEFORE_CONSUME
   - KEY: KEY_SLASH
     TAP: KEY_SLASH
     HOLD: KEY_LEFTCTRL
+    HOLD_START: BEFORE_CONSUME
   - KEY: KEY_102ND
     TAP: KEY_102ND
     HOLD: KEY_LEFTCTRL
+    HOLD_START: BEFORE_CONSUME
 " | sudo tee /etc/interception/dual-function-keys/gwbrck-map.yaml
 
 echo "
