minor ui changes

--- a/.chezmoiscripts/run_once_before_10-linux-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-linux-install-packages.sh.tmpl
@@ -62,6 +62,8 @@ sudo pacman -S --needed which
 sudo pacman -S --needed wl-clipboard
 sudo pacman -S --needed wofi
 sudo pacman -S --needed zip
+sudo pacman -S --needed python-i3ipc
+
 
 if ! type -q paru
         set CWD $pwd
