--- a/dot_config/alacritty/main.yml.tmpl
+++ b/dot_config/alacritty/main.yml.tmpl
@@ -4,7 +4,11 @@ window:
     x: 8
     y: 4
   dynamic_padding: true
+{{ if (eq .chezmoi.os "darwin") }}
+  decorations: buttonless 
+{{ else if (eq .chezmoi.os "linux" ) }}
   decorations: none
+{{- end }}
 
 font:
   normal:
