--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -1,8 +1,15 @@
 [user]
 	name = Gregor
-	email = {{ pass "other/me" }}
+
+{{ if eq .chezmoi.os "darwin" -}}
+[credential]
+	helper = osxkeychain
+{{ end -}}
+
+{{ if eq .chezmoi.os "linux" -}}
 [credential]
 	helper = !pass-git-helper $@
+{{ end -}}
 [core]
 	excludesFile = ~/.config/git/ignore
 [init]
