--- a/.chezmoiscripts/run_once_before_10-mac-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-mac-install-packages.sh.tmpl
@@ -15,6 +15,7 @@ brew "git"
 brew "chezmoi"
 brew "sqlite"
 brew "coreutils"
+brew "cmake"
 brew "neovim"
 brew "pandoc"
 brew "pipenv"
@@ -24,6 +25,8 @@ brew "shellcheck"
 brew "texlab"
 brew "pinentry-mac"
 brew "gnupg"
+brew "pass"
+brew "pass-git-helper"
 brew "tmux"
 brew "d12frosted/emacs-plus/emacs-plus@29", args: ["with-elrumo2-icon", "with-native-comp", "with-no-frame-refocus", "with-xwidgets"]
 cask "alacritty"
