--- a/.chezmoiscripts/run_once_before_10-mac-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-mac-install-packages.sh.tmpl
@@ -28,7 +28,7 @@ brew "gnupg"
 brew "pass"
 brew "pass-git-helper"
 brew "tmux"
-brew "d12frosted/emacs-plus/emacs-plus@29", args: ["with-elrumo2-icon", "with-native-comp", "with-no-frame-refocus", "with-xwidgets"]
+brew "d12frosted/emacs-plus/emacs-plus@29", args: ["with-elrumo2-icon", "with-native-comp", "with-xwidgets"]
 cask "alacritty"
 cask "deepl"
 cask "font-cantarell"
