--- a/.chezmoiscripts/run_once_before_10-mac-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-mac-install-packages.sh.tmpl
@@ -30,6 +30,7 @@ brew "pass-git-helper"
 brew "tmux"
 brew "d12frosted/emacs-plus/emacs-plus@29", args: ["with-elrumo2-icon", "with-native-comp", "with-xwidgets"]
 cask "alacritty"
+cask "alt-tab"
 cask "deepl"
 cask "font-cantarell"
 cask "font-fira-code"
