add some python deps

--- a/.chezmoiscripts/run_once_before_10-mac-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-mac-install-packages.sh.tmpl
@@ -18,7 +18,12 @@ brew "coreutils"
 brew "cmake"
 brew "neovim"
 brew "pandoc"
+brew "pipx"
 brew "pipenv"
+brew "poetry"
+brew "virtualfish"
+brew "python@3.11"
+brew "r"
 brew "poppler"
 brew "ripgrep"
 brew "shellcheck"
@@ -38,9 +43,6 @@ cask "font-ubuntu-mono-nerd-font"
 cask "karabiner-elements"
 cask "mactex-no-gui"
 cask "spaceman"
-cask "via"
-cask "firefox"
-cask "spotify"
 EOF
 
 
