--- a/.chezmoiscripts/run_once_after_90-mac-configure.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_90-mac-configure.sh.tmpl
@@ -2,9 +2,9 @@
 #!/bin/bash
 set -eufo pipefail
 
-if ! grep -q "/usr/local/bin/fish" /etc/shells; then
-   echo "/usr/local/bin/fish" | sudo tee -a /etc/shells
-   chsh -s /usr/local/bin/fish
+if ! grep -q "/opt/homebrew/bin/fish" /etc/shells; then
+   echo "/opt/homebrew/bin/fish" | sudo tee -a /etc/shells
+   chsh -s /opt/homebrew/bin/fish
 fi
 
 defaults write com.lwouis.alt-tab-macos holdShortcut "\\U2318"
