--- a/.chezmoiscripts/run_once_after_91-mac-dark-mode-notify.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_91-mac-dark-mode-notify.sh.tmpl
@@ -12,7 +12,8 @@ git clone https://github.com/bouk/dark-mode-notify.git
 
 cd dark-mode-notify
 
-swiftc main.swift -o /usr/local/bin/dark-mode-notify    
+swiftc main.swift -o $HOME/bin/dark-mode-notify    
+  
 
 echo "
 <?xml version=\"1.0\" encoding=\"UTF-8\"?>
