--- a/.chezmoiscripts/run_once_after_91-mac-dark-mode-notify.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_91-mac-dark-mode-notify.sh.tmpl
@@ -31,7 +31,7 @@ echo "
     <string>${HOME}/dark-mode-notify-stdout.log</string>
     <key>ProgramArguments</key>
     <array>
-       <string>/usr/local/bin/dark-mode-notify</string>
+       <string>${HOME}/bin/dark-mode-notify</string>
        <string>${EXEC_THEME}</string>
     </array>
 </dict>
