--- a/.chezmoiscripts/run_once_before_10-mac-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-mac-install-packages.sh.tmpl
@@ -21,7 +21,8 @@ brew "pipx"
 brew "pipenv"
 brew "poetry"
 brew "virtualfish"
-brew "python@3.11"
+brew "python"
+brew "npm"
 brew "r"
 brew "poppler"
 brew "ripgrep"
