--- a/.chezmoiscripts/run_once_after_90-mac-configure.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_90-mac-configure.sh.tmpl
@@ -8,6 +8,7 @@ if ! grep -q "/opt/homebrew/bin/fish" /etc/shells; then
 fi
 
 defaults write com.lwouis.alt-tab-macos holdShortcut "\\U2318"
+defaults write com.lwouis.alt-tab-macos nextWindowShortcut2 ""
 defaults write com.lwouis.alt-tab-macos hideWindowlessApps true
 defaults write com.lwouis.alt-tab-macos menubarIcon 3
 defaults write com.lwouis.alt-tab-macos previewFocusedWindow true
