fix for zotra breaking

--- a/.chezmoiscripts/run_onchange_after_zotra_cli_install.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_zotra_cli_install.sh.tmpl
@@ -8,6 +8,5 @@
 # {{ output "git" .zotraPathSub "log" "-n" "5" | sha256sum }}
 
 
-cd ~/.config/zotra-cli
+cd ~/.config/zotra-server
 npm install .
-npm install -g .
