--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -2,8 +2,8 @@
 
 [data]
 email = {{ $email | quote }}
-zotraPath = '--git-dir={{ .chezmoi.homeDir }}/.config/zotra-cli/.git'
-zotraPathSub = '--git-dir={{ .chezmoi.homeDir }}/.config/zotra-cli/module/translation-server/.git'
+zotraPath = '--git-dir={{ .chezmoi.homeDir }}/.config/zotra-server/.git'
+zotraPathSub = '--git-dir={{ .chezmoi.homeDir }}/.config/zotra-server/module/translation-server/.git'
 
 
 [git]
