emacs pet instead of custom functions

--- a/.chezmoiscripts/run_once_before_10-mac-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-mac-install-packages.sh.tmpl
@@ -20,10 +20,10 @@ brew "pandoc"
 brew "pipx"
 brew "pipenv"
 brew "poetry"
-brew "virtualfish"
 brew "python"
 brew "npm"
 brew "r"
+brew "dasel"
 brew "poppler"
 brew "ripgrep"
 brew "shellcheck"
