--- a/.chezmoiscripts/run_once_before_10-mac-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-mac-install-packages.sh.tmpl
@@ -17,6 +17,9 @@ brew "coreutils"
 brew "cmake"
 brew "neovim"
 brew "pandoc"
+brew "tesseract"
+brew "tesseract-lang"
+brew "ocrmypdf"
 brew "pipx"
 brew "pipenv"
 brew "poetry"
