--- a/private_dot_local/private_share/pandoc/defaults/bib.yaml.tmpl
+++ b/private_dot_local/private_share/pandoc/defaults/bib.yaml.tmpl
@@ -1,4 +1,4 @@
-bibliography: "{{ .chezmoi.homeDir }}/Documents/Bib/main.json"
+bibliography: "{{ .chezmoi.homeDir }}/bib.json"
 csl: "apa"
 filters:
 - type: citeproc
