fix mac installation

--- a/.chezmoiscripts/run_once_before_10-mac-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-mac-install-packages.sh.tmpl
@@ -6,47 +6,77 @@ if ! type brew > /dev/null; then
 fi
 
 brew bundle --no-lock --file=/dev/stdin <<EOF
-tap  "d12frosted/emacs-plus"
-tap  "homebrew/services"
-tap  "homebrew/cask-fonts"
+tap "homebrew/cask-fonts"
+tap "homebrew/services"
+brew "python"
+brew "ansible"
+brew "chezmoi"
+brew "coreutils"
+brew "sqlite"
+brew "gcc"
+brew "tesseract"
 brew "fish"
 brew "git"
-brew "chezmoi"
-brew "sqlite"
-brew "coreutils"
-brew "cmake"
-brew "neovim"
-brew "pandoc"
-brew "tesseract"
-brew "tesseract-lang"
-brew "ocrmypdf"
-brew "pipx"
-brew "pipenv"
-brew "poetry"
-brew "python"
-brew "npm"
-brew "r"
-brew "dasel"
-brew "poppler"
-brew "ripgrep"
-brew "shellcheck"
-brew "texlab"
-brew "pinentry-mac"
 brew "gnupg"
+brew "graphviz"
+brew "jq"
+brew "neovim"
+brew "ocrmypdf"
+brew "ollama"
+brew "pandoc"
 brew "pass"
 brew "pass-git-helper"
+brew "pinentry-mac"
+brew "pipenv"
+brew "pipx"
+brew "poetry"
+brew "poppler"
+brew "prettier"
+brew "pygments"
+brew "pympress"
+brew "python@3.12"
+brew "r"
+brew "ripgrep"
+brew "tesseract-lang"
+brew "texlab"
 brew "tmux"
-brew "d12frosted/emacs-plus/emacs-plus@29", args: ["with-elrumo2-icon", "with-native-comp", "with-xwidgets"]
+brew "wget"
+cask "adobe-acrobat-reader"
 cask "alacritty"
 cask "alt-tab"
 cask "deepl"
+cask "docker"
+cask "figma"
+cask "firefox"
 cask "font-cantarell"
 cask "font-fira-code"
+cask "font-open-sans"
 cask "font-ubuntu-mono-nerd-font"
 cask "karabiner-elements"
 cask "mactex-no-gui"
-cask "spaceman"
+cask "nextcloud"
+cask "obsidian"
+cask "quarto"
+cask "raspberry-pi-imager"
+cask "raycast"
+cask "signal"
+cask "steam"
+cask "tunnelblick"
+cask "visual-studio-code"
+cask "zotero@beta"
+cask "zoom"
+vscode "alefragnani.project-manager"
+vscode "chrischinchilla.vscode-pandoc"
+vscode "esbenp.prettier-vscode"
+vscode "mblode.zotero"
+vscode "ms-ceintl.vscode-language-pack-de"
+vscode "ms-python.debugpy"
+vscode "ms-python.python"
+vscode "ms-python.vscode-pylance"
+vscode "quarto.quarto"
+vscode "reditorsupport.r"
+vscode "sainnhe.edge"
+vscode "sumneko.lua"
+vscode "tomoki1207.pdf"
 EOF
-
-
 {{ end -}}
