add xcode-select -p

--- a/.chezmoiscripts/run_once_before_10-mac-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-mac-install-packages.sh.tmpl
@@ -1,6 +1,8 @@
 {{- if (eq .chezmoi.os "darwin") -}}
 #!/bin/bash
 
+xcode-select -p >/dev/null 2>&1 || xcode-select --install
+
 if ! type brew > /dev/null; then
   /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
 fi
