--- a/.chezmoiscripts/run_once_before_10-mac-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-mac-install-packages.sh.tmpl
@@ -70,6 +70,8 @@ cask "zoom"
 vscode "alefragnani.project-manager"
 vscode "chrischinchilla.vscode-pandoc"
 vscode "esbenp.prettier-vscode"
+vscode "foxundermoon.shell-format"
+vscode "mads-hartmann.bash-ide-vscode"
 vscode "mblode.zotero"
 vscode "ms-ceintl.vscode-language-pack-de"
 vscode "ms-python.debugpy"
