--- a/.chezmoiscripts/run_once_before_10-mac-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-mac-install-packages.sh.tmpl
@@ -3,8 +3,9 @@
 
 xcode-select -p >/dev/null 2>&1 || xcode-select --install
 
-if ! type brew > /dev/null; then
-  /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+if ! type brew >/dev/null; then
+  export PATH="/opt/homebrew/bin:${PATH}"
+  NONINTERACTIVE=1 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
 fi
 
 brew bundle --no-lock --file=/dev/stdin <<EOF
