fix brew bundel

--- a/.chezmoiscripts/run_once_before_10-mac-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-mac-install-packages.sh.tmpl
@@ -10,12 +10,13 @@ fi
 
 brew bundle --no-lock --file=/dev/stdin <<EOF
 tap "homebrew/cask-fonts"
-tap "homebrew/services"
 brew "python"
 brew "ansible"
+brew "node"
 brew "chezmoi"
+brew "cmake"
 brew "coreutils"
-brew "sqlite"
+brew "dasel"
 brew "gcc"
 brew "tesseract"
 brew "fish"
@@ -28,21 +29,21 @@ brew "ocrmypdf"
 brew "ollama"
 brew "pandoc"
 brew "pass"
+brew "pass-otp"
 brew "pass-git-helper"
 brew "pinentry-mac"
 brew "pipenv"
 brew "pipx"
 brew "poetry"
 brew "poppler"
-brew "prettier"
 brew "pygments"
 brew "pympress"
-brew "python@3.12"
+brew "python@3.11"
 brew "r"
 brew "ripgrep"
 brew "tesseract-lang"
-brew "texlab"
 brew "tmux"
+brew "typst"
 brew "wget"
 cask "adobe-acrobat-reader"
 cask "alacritty"
@@ -51,23 +52,23 @@ cask "deepl"
 cask "docker"
 cask "figma"
 cask "firefox"
-cask "font-cantarell"
-cask "font-fira-code"
-cask "font-open-sans"
 cask "font-ubuntu-mono-nerd-font"
+cask "jasp"
 cask "karabiner-elements"
 cask "mactex-no-gui"
+cask "morgen"
 cask "nextcloud"
 cask "obsidian"
 cask "quarto"
 cask "raspberry-pi-imager"
 cask "raycast"
+cask "rstudio"
 cask "signal"
 cask "steam"
 cask "tunnelblick"
 cask "visual-studio-code"
-cask "zotero@beta"
 cask "zoom"
+cask "zotero@beta"
 vscode "alefragnani.project-manager"
 vscode "chrischinchilla.vscode-pandoc"
 vscode "esbenp.prettier-vscode"
@@ -75,9 +76,7 @@ vscode "foxundermoon.shell-format"
 vscode "mads-hartmann.bash-ide-vscode"
 vscode "mblode.zotero"
 vscode "ms-ceintl.vscode-language-pack-de"
-vscode "ms-python.debugpy"
 vscode "ms-python.python"
-vscode "ms-python.vscode-pylance"
 vscode "quarto.quarto"
 vscode "reditorsupport.r"
 vscode "sainnhe.edge"
