--- a/.chezmoiscripts/run_once_before_10-mac-install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_once_before_10-mac-install-packages.sh.tmpl
@@ -12,6 +12,7 @@ brew bundle --no-lock --file=/dev/stdin <<EOF
 tap "homebrew/cask-fonts"
 brew "python"
 brew "ansible"
+brew "ansible-lint"
 brew "node"
 brew "chezmoi"
 brew "cmake"
@@ -78,6 +79,7 @@ vscode "mblode.zotero"
 vscode "ms-ceintl.vscode-language-pack-de"
 vscode "ms-python.python"
 vscode "quarto.quarto"
+vscode "redhat.ansible"
 vscode "reditorsupport.r"
 vscode "sainnhe.edge"
 vscode "sumneko.lua"
