--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -4,6 +4,6 @@
 [credential]
 	helper = !pass-git-helper $@
 [core]
-	excludesFile = ~/.config/git/ignore
+	excludesfile = ~/.config/git/ignore
 [init]
 	defaultBranch = main
